--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   <title>E-Commorse Website with vue + vite</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'> <!--Import google fonts (fa fa icon)-->
